# yura-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LOCAL_TEST.md  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
infra/: Pulumi.yaml  __main__.py  requirements.txt
scripts/: build_lambda.sh
src/: config.py  discord.py  handler.py  state.py  twitter.py  utils.py
tests/: test_config.py
