[tool.poetry]
name = "yura-bot"
version = "0.1.0"
description = "Discord bot for Twitter notifications"
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
tweety-ns = "1.0.9"
discord-py = "2.3.2"
pydantic = "2.10.6"
pydantic-settings = "2.7.1"
pyyaml = "6.0.1"
loguru = "0.7.2"
boto3 = "1.34.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.9.1"
mypy = "1.14.1"
pre-commit = "4.0.1"

[tool.poetry.group.infra.dependencies]
pulumi = "3.100.0"
pulumi-aws = "6.18.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
